--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -2,94 +2,25 @@
  * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
  * http://cssreset.com
  */
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video,
-input {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font-weight: normal;
-    vertical-align: middle;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video, input {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font-weight: normal;
+  vertical-align: middle;
 }
 
 html {
@@ -109,7 +40,7 @@ body {
     width: 100%;
     margin: 0 auto;
     overflow-x: hidden;
-    font: 14px/1 'Heiti SC', 'Helvetica', 'HelveticaNeue', 'Droidsansfallback', "Droid Sans", 'Dengxian', 'Segoe', 'microsoft yahei';
+    font: 14px/1.5 'Heiti SC', 'Helvetica', 'HelveticaNeue', 'Droidsansfallback', "Droid Sans", 'Dengxian', 'Segoe', 'microsoft yahei';
     color: #323232;
     background-color: #eeeff3;
 }
@@ -148,19 +79,17 @@ a {
     display: inline-block;
     text-decoration: none;
     -webkit-backface-visibility: hidden;
-    color: #969696;
+    color:#969696;
 }
 
 li {
     list-style: none;
 }
-
-img {
-    border: none;
+img{
+    border:none;
     vertical-align: middle;
-    width: 100%;
+    width:100%;
 }
-
 ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
@@ -183,6 +112,17 @@ img {
     -webkit-border-radius: 6px;
 }
 
+.clearfix:after,
+.clearfix:before {
+    display: block;
+    content: "clear";
+    height: 0;
+    clear: both;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+/*placeholder 样式*/
 input:-moz-placeholder,
 textarea:-moz-placeholder {
     color: #dcdcdc;
@@ -197,16 +137,8 @@ input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
     color: #dcdcdc;
 }
-
-.clearfix {
-    clear: both;
-}
-
-.clearfix:after,
-.clearfix:before {
-    content: '';
-    display: block;
-    visibility: hidden;
-    height: 0;
-    overflow: hidden;
+.container{
+    width:100%;
+    height:100%;
+    position: relative;
 }
