--- a/app/pages/advertisement/detail.css
+++ b/app/pages/advertisement/detail.css
@@ -126,4 +126,54 @@
    font-size: 11px;
 }
 
+.score-mask-wrapper{
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index: 99;
+    background:rgba(0,0,0,0.5);     
+}
+
+.score-mask-wrapper .score-content{
+    position: fixed;
+    left:0;  
+    bottom:0;
+    height:3.8rem;
+    width:100%;
+    background-color: #fff;
+    z-index: 100;
+}
+
+.score-mask-wrapper .score-content h2{
+   height: 1rem;
+   line-height: 1rem;
+   font-size: 17px;
+   color:#333;
+   border-bottom:1px solid #ddd;
+   padding-left:.48rem;
+}
+
+.score-mask-wrapper .score-content .start{
+   height: 1.55rem;
+   line-height: 1.55rem;
+   padding-left:.48rem;
+}
+
+.score-mask-wrapper .start span{
+   display: inline-block;
+   width:.66rem;
+   height:.61rem;
+   background:url(../../images/gray_start_icon.png) no-repeat;
+   background-size: 100%;
+   margin-right:.38rem;
+}
+
+.score-mask-wrapper  .score-description{
+   font-size: 14px;
+   padding-left:.48rem;
+   color:#333;   
+}
+
 
