--- a/app/pages/login/login.css
+++ b/app/pages/login/login.css
@@ -9,32 +9,27 @@
 
 .login-content{
 	position: relative;
-	padding:1.49rem .75rem 0 .75rem;
+	padding:1.8rem .75rem 0 .75rem;
 }
 
 .login-content li{
 	position: relative;
     height:.86rem;
-    border:1px solid #333237;  
-    border-radius: 10px; 
-}
-
-.login-content li:nth-child(1){
+    border:1px solid #333237;
+    border-radius: 10px;
     overflow: hidden;
-	margin-bottom: .3rem;
+    margin-bottom: .32rem;
 }
 
-.login-content li:nth-child(1) label{
+.login-content li label{
 	display: inline-block;
-	height:100%;
+	height:.56rem;
 	width:.8rem;
+	margin:.15rem 0;
 	border-right: 1px solid #999;
-	background: url(../../images/mobile_icon.png) no-repeat;
-	background-position: center;
-	background-size: .3rem .45rem;
 }
 
-.login-content li:nth-child(1) input{
+.login-content li input{
 	display: inline-block;
 	height:100%;
 	width:5rem;
@@ -44,45 +39,19 @@
 	font-size: 14px;
 }
 
-.login-content li:nth-child(2){
-	border:none;  
-	margin-bottom: .75rem;
+.login-content li:nth-child(1) label{
+	background: url(../../images/account_icon.png) no-repeat;
+	background-position: center;
+	background-size: .35rem .38rem;
 }
 
 .login-content li:nth-child(2) label{
-	display: inline-block;
-	height:.86rem;
-	line-height: .86rem;
-	width:2.5rem;	
-    background-color:#b09b7c;
-    vertical-align: middle;
-    text-align: center;
-	border-bottom-right-radius: 10px;
-	border-top-right-radius: 10px; 
-	color:#fff;   
-	font-size: 14px;
+	background: url(../../images/password_icon.png) no-repeat;
+	background-position: center;
+	background-size: .34rem .4rem;
 }
 
-.login-content li:nth-child(2) input{
-	display: inline-block;
-	height:.86rem;
-	width:3.44rem;
-	padding-left:15px;
-	background-color: #eee;
-	color:#999;
-	font-size: 14px;
-	border:1px solid #333237;  
-	border-right: none;
-	border-radius: 10px; 
-	border-bottom-right-radius: 0;
-	border-top-right-radius: 0;
-}
-
-.login-content li:nth-child(3){
-	margin-bottom: 1.65rem;
-}
-
-.login-content li:nth-child(3) label{
+.login-content li:nth-child(2) span{
     position: absolute;
     right:0;
     top:0;
@@ -94,29 +63,40 @@
     background-position: left center;
 }
 
-.login-content li:nth-child(3) input{
-	display: inline-block;
-	height:100%;
-	width:5.8rem;
-	color:#999;
-	font-size: 14px;
-	border-radius: 10px; 
-	padding-left:15px;
-	background-color: #eee;
+.login-content li:nth-child(3){
+    border:none;
+    height:.5rem;
+    text-align: right;
+    margin-bottom: 1.8rem;
 }
 
-.login-content li:nth-child(4){
-	border:none;
-	border:1px solid #811b10;  
-	overflow: hidden;
+.login-content li:nth-child(3) span{
+   font-size: 14px;
+   color:#333;
+}
+
+.login-content li:nth-child(4),.login-content li:nth-child(5){
+   text-align: center;
+   line-height: .86rem;
+   border:none;
+}
+
+.login-content li:nth-child(4) a,.login-content li:nth-child(5) a{
+   display: inline-block;
+   width:100%;
+   height:100%;
+   font-size:17px;
+   color:#fff;
+   border-radius:10px;
 }
 
 .login-content li:nth-child(4) a{
-	height:.86rem;
-	line-height: .86rem;
-	width:100%;
-	background-color: #811b10;
-	text-align: center;
-	font-size: 17px;
-	color:#fff;
+   background-color: #811b10;
 }
+
+.login-content li:nth-child(5) a{
+   background-color: #dddddd;
+}
+
+
+
