--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -42,7 +42,7 @@ body {
     overflow-x: hidden;
     font: 14px/1.5 'Heiti SC', 'Helvetica', 'HelveticaNeue', 'Droidsansfallback', "Droid Sans", 'Dengxian', 'Segoe', 'microsoft yahei';
     color: #323232;
-    background-color: #eeeff3;
+    background-color: #fff;
 }
 
 article,
