--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -284,3 +284,13 @@ textarea::-webkit-input-placeholder {
     color: #811b10;
     background-image: url(../images/mine_light.png);
 }
+
+.load-wrapper{
+    position: fixed;
+    bottom: 0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, .5);
+}
