--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -294,3 +294,17 @@ textarea::-webkit-input-placeholder {
     z-index: 99;
     background-color: rgba(0, 0, 0, .5);
 }
+
+.share-wrapper{
+    position: fixed;
+    bottom: 0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, .5);    
+}
+
+.share-wrapper .guide{
+    
+}
