--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -108,7 +108,7 @@ body {
     max-width: 10rem;
     width: 100%;
     margin: 0 auto;
-    overflow-x: hidden;
+    overflow: hidden;
     font: 14px/1.5 'Heiti SC', 'Helvetica', 'HelveticaNeue', 'Droidsansfallback', "Droid Sans", 'Dengxian', 'Segoe', 'microsoft yahei';
     color: #323232;
     background-color: #fff;
@@ -215,12 +215,14 @@ textarea::-webkit-input-placeholder {
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .container {
     position: relative;
     width: 100%;
     height: 100%;
+    overflow-y: auto;
 }
 
 .nav-wrapper{
