--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -44,6 +44,8 @@
 }
 
 .adv-detial-bar > div:nth-child(3) {
+    height: .88rem;
+    line-height: .88rem;
     width: 20%;
 }
 
@@ -139,56 +141,6 @@
     font-size: 11px;
 }
 
-.score-mask-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 99;
-    background: rgba(0, 0, 0, 0.5);
-}
-
-.score-mask-wrapper .score-content {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    height: 3.8rem;
-    width: 100%;
-    background-color: #fff;
-    z-index: 100;
-}
-
-.score-mask-wrapper .score-content h2 {
-    height: 1rem;
-    line-height: 1rem;
-    font-size: 17px;
-    color: #333;
-    border-bottom: 1px solid #ddd;
-    padding-left: .48rem;
-}
-
-.score-mask-wrapper .score-content .start {
-    height: 1.55rem;
-    line-height: 1.55rem;
-    padding-left: .48rem;
-}
-
-.score-mask-wrapper .start span {
-    display: inline-block;
-    width: .66rem;
-    height: .61rem;
-    background: url(../../images/gray_start_icon.png) no-repeat;
-    background-size: 100%;
-    margin-right: .38rem;
-}
-
-.score-mask-wrapper .score-description {
-    font-size: 14px;
-    padding-left: .48rem;
-    color: #333;
-}
-
 @-webkit-keyframes scrollMove {
     0% {
         -webkit-transform: translateY(0px);
@@ -266,4 +218,115 @@
     top: 0px;
     -webkit-animation: scrollMove 30s linear 0.5s infinite;
     animation: scrollMove 30s linear 0.5s infinite;
+}
+
+.score-mask-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999999999999999;
+    background: rgba(0, 0, 0, 0.5);
+    transform: translateY(200%);
+    -webkit-transform:translateY(200%);
+    transition: all .5s linear;
+    -webkit-transition: all .5s linear;
+}
+
+.score-mask-wrapper .score-content {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 5.8rem;
+    width: 100%;
+    background-color: #fff;
+    z-index: 100;
+}
+
+.score-mask-wrapper .score-content h2 {
+    height: 1rem;
+    line-height: 1rem;
+    font-size: 17px;
+    color: #333;
+    border-bottom: 1px solid #ddd;
+    padding-left: .48rem;
+}
+
+.score-mask-wrapper .score-content .start {
+    height: 1.55rem;
+    line-height: 1.55rem;
+    padding-left: .48rem;
+}
+
+.score-mask-wrapper .start span {
+    display: inline-block;
+    width: .66rem;
+    height: .61rem;
+    background: url(../../images/gray_start_icon.png) no-repeat;
+    background-size: 100%;
+    margin-right: .38rem;
+}
+
+.score-mask-wrapper .score-description {
+    font-size: 14px;
+    padding-left: .48rem;
+    color: #333;
+}
+
+.score-mask-wrapper .starability-slot {
+    position: relative;
+    width:4.5rem;
+    margin:.45rem .47rem;
+    text-align: left;
+    overflow: hidden;
+}
+
+.score-mask-wrapper .starability-slot > input {
+    position: absolute;
+    left:-100%;
+    opacity: 0
+}
+
+.score-mask-wrapper .starability-slot > label {
+    position: relative;
+    display: inline-block;
+    float: right;
+    width: .6rem;
+    height: .6rem;
+    color: transparent;
+    cursor: pointer;
+    background-image: url(../../images/start_icon.png);
+    background-repeat: no-repeat;
+    margin-right:.3rem;
+    background-size: .6rem auto
+}
+
+.score-mask-wrapper .starability-slot>input:checked~label,
+.score-mask-wrapper .starability-slot>input:focus~label,
+.score-mask-wrapper .starability-slot>input:hover~label {
+    background-position: 0 -.6rem
+}
+
+.score-mask-wrapper .starability-slot>input:checked~label,
+.score-mask-wrapper .starability-slot>input:focus~label,
+.score-mask-wrapper .starability-slot>input:hover~label {
+    transition: background-position .7s
+}
+
+.score-mask-wrapper .score-button{
+    margin:.47rem;
+    height:.86rem;
+    line-height: .86rem;
+    background-color: #811b10;
+    text-align: center;
+    font-size: 17px;
+    color:#fff; 
+    border-radius: 10px;
+    margin-top: 1rem  
+}
+
+.scoreAnimation{
+    transform: translateY(0);
+    -webkit-transform:translateY(0);
 }
