--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -220,21 +220,18 @@
     animation: scrollMove 30s linear 0.5s infinite;
 }
 
-.score-mask-wrapper {
+.score-wrapper {
     position: fixed;
+    display: none;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 999999999999999;
+    z-index: 99;
     background: rgba(0, 0, 0, 0.5);
-    transform: translateY(200%);
-    -webkit-transform:translateY(200%);
-    transition: all .5s linear;
-    -webkit-transition: all .5s linear;
 }
 
-.score-mask-wrapper .score-content {
+.score-wrapper .score-content {
     position: fixed;
     left: 0;
     bottom: 0;
@@ -242,9 +239,18 @@
     width: 100%;
     background-color: #fff;
     z-index: 100;
+    transform: translateY(100%);
+    -webkit-transform:translateY(100%);
+    transition: translateY 1s linear;
+    -webkit-transition: translateY 1s linear;
 }
 
-.score-mask-wrapper .score-content h2 {
+.score-wrapper .scoreAnimation{
+    transform: translateY(0);
+    -webkit-transform:translateY(0);
+}
+
+.score-wrapper .score-content h2 {
     height: 1rem;
     line-height: 1rem;
     font-size: 17px;
@@ -253,13 +259,13 @@
     padding-left: .48rem;
 }
 
-.score-mask-wrapper .score-content .start {
+.score-wrapper .score-content .start {
     height: 1.55rem;
     line-height: 1.55rem;
     padding-left: .48rem;
 }
 
-.score-mask-wrapper .start span {
+.score-wrapper .start span {
     display: inline-block;
     width: .66rem;
     height: .61rem;
@@ -268,13 +274,13 @@
     margin-right: .38rem;
 }
 
-.score-mask-wrapper .score-description {
+.score-wrapper .score-description {
     font-size: 14px;
     padding-left: .48rem;
     color: #333;
 }
 
-.score-mask-wrapper .starability-slot {
+.score-wrapper .starability-slot {
     position: relative;
     width:4.5rem;
     margin:.45rem .47rem;
@@ -282,13 +288,13 @@
     overflow: hidden;
 }
 
-.score-mask-wrapper .starability-slot > input {
+.score-wrapper .starability-slot > input {
     position: absolute;
     left:-100%;
     opacity: 0
 }
 
-.score-mask-wrapper .starability-slot > label {
+.score-wrapper .starability-slot > label {
     position: relative;
     display: inline-block;
     float: right;
@@ -302,19 +308,19 @@
     background-size: .6rem auto
 }
 
-.score-mask-wrapper .starability-slot>input:checked~label,
-.score-mask-wrapper .starability-slot>input:focus~label,
-.score-mask-wrapper .starability-slot>input:hover~label {
+.score-wrapper .starability-slot>input:checked~label,
+.score-wrapper .starability-slot>input:focus~label,
+.score-wrapper .starability-slot>input:hover~label {
     background-position: 0 -.6rem
 }
 
-.score-mask-wrapper .starability-slot>input:checked~label,
-.score-mask-wrapper .starability-slot>input:focus~label,
-.score-mask-wrapper .starability-slot>input:hover~label {
+.score-wrapper .starability-slot>input:checked~label,
+.score-wrapper .starability-slot>input:focus~label,
+.score-wrapper .starability-slot>input:hover~label {
     transition: background-position .7s
 }
 
-.score-mask-wrapper .score-button{
+.score-wrapper .score-button{
     margin:.47rem;
     height:.86rem;
     line-height: .86rem;
@@ -326,7 +332,65 @@
     margin-top: 1rem  
 }
 
-.scoreAnimation{
-    transform: translateY(0);
-    -webkit-transform:translateY(0);
+.packet-wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.packet-wrapper .packet-content{
+    position: absolute;
+    width:5.74rem;
+    height:8.66rem;
+    top:2.3rem;
+    left:.9rem;
+    background: url(../../images/packet_bg.png) no-repeat;
+    background-size: contain;
+}
+
+.packet-wrapper .packet-header{
+   position: relative;
+   width:1.25rem;
+   height:1.25rem;
+   margin:1.2rem auto 0;
+   background:url(../../images/user_header_icon.png);
+   background-size: contain;
+}
+
+.packet-wrapper .packet-title{
+   position: relative;
+   margin-top: .1rem;
+   text-align: center;
+   font-size: 16px;
+   color:#ffd8b0;
+}
+
+.packet-wrapper .packet-desprition{
+   position: relative;
+   margin-top: .1rem;
+   text-align: center;
+   font-size: 14px;
+   color:#ffd8b0;
+}
+
+.packet-wrapper .packet-wish{
+   position: relative;
+   text-align: center;
+   margin-top: .5rem;
+   font-size: 20px;
+   color:#ffd7af;
+}
+
+.packet-wrapper .packet-button{
+   position: relative;
+   top:.5rem;
+   width:1.48rem;
+   height:1.48rem;
+   margin:0 auto;
+   background:url(../../images/packet_open_icon.png) no-repeat;
+   background-size: contain;
 }
