--- a/app/reset/reset.css
+++ b/app/reset/reset.css
@@ -95,6 +95,7 @@ input {
 html {
     background-color: #eeeff3;
     -webkit-text-size-adjust: 100%;
+    overflow: hidden; 
 }
 
 html * {
@@ -222,7 +223,7 @@ textarea::-webkit-input-placeholder {
     position: relative;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
+    overflow: hidden;
 }
 
 .nav-wrapper{
